fixed: pokemon type in list was clipping

--- a/src/css/pokemonListItem.css
+++ b/src/css/pokemonListItem.css
@@ -26,9 +26,11 @@
     display: inline-block;
     text-align: center;
     min-width: 70px;
+    font-size: 0.9em;
+    max-width: 20%;
     color: white;
-    padding: 5px;
+    padding: 2px;
     border-radius: 5px;
-    margin: 0px 2px;
+    margin: 0px 1px;
     text-transform: uppercase;
 }
